# pricer3d

./: .dockerignore  .env  .env.example  .env.prod.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.prod  README.md  VERSION  _check_db.py  _check_quotes.py  _check_weights.py  _find_gcode.py  _find_latest.py  _fix_display.py  _patch_main.py  _reset_admin.py  _run_test.py  _test_api.py  _test_api2.py  _test_compare.py  _test_name.py  _test_printer_compare.py  _test_split.py  _upload_test.py  app.db-shm  app.db-wal  docker-compose.prod.yml  docker-compose.yml  main.py  overview.md  package-lock.json  push.bat  push.ps1  pyproject.toml  requirements.txt  schema.sql  test_app.db  test_big_box.stl
.claude/: launch.json
.playwright-cli/: page-2026-07-11T17-09-10-506Z.yml  page-2026-07-11T17-29-48-608Z.yml  page-2026-07-11T17-37-31-586Z.yml  page-2026-07-11T17-38-27-779Z.yml  page-2026-07-11T17-39-06-197Z.yml  page-2026-07-11T17-39-35-854Z.yml  page-2026-07-11T17-39-51-011Z.yml  page-2026-07-11T17-40-26-556Z.yml  page-2026-07-11T17-41-00-253Z.yml  page-2026-07-11T17-41-21-930Z.yml  page-2026-07-11T17-43-35-468Z.yml  page-2026-07-11T17-44-25-605Z.yml  page-2026-07-11T17-44-58-553Z.yml  page-2026-07-11T17-52-20-576Z.yml
alembic/: env.py
app/: __init__.py  audit.py  auth.py  backup.py  captcha.py  cleanup.py  config.py  database.py  db.py  db_check.py  deps.py  error_notify.py  error_stats.py  errors.py  logging_config.py  material_resolver.py  material_seed.py  metrics.py  middleware.py  migration_add_new_printers.py  migration_brand_customization.py  models.py  (+26 more)
bambu_cli/: CMakeLists.txt  Dockerfile  README.md  __init__.py  cli_main.cpp
(+233 files in other folders)
